--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "angular-popper": "^2.0.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
@@ -33,6 +34,7 @@
     "jquery": "^3.5.1",
     "mongoose": "^5.10.5",
     "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
